--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,8 +18,10 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+[data-theme="dark"] {
+  /* --ifm-color-primary: #25c2a0; */
+  --ifm-color-primary: #fbb531;
+  --ifm-color-hover-primary: #cc942d;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
@@ -27,4 +29,14 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+a {
+  color: var(--ifm-color-primary);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--ifm-color-hover-primary);
+  text-decoration-color: var(--ifm-color-hover-primary);
 }
